Correct layout for mobile devices
A follow-up, minor layout change for main (landing) page - mobiles.
This patch contains an improvement for portrait oriented mobile screens:

- Changed the 'stretchy' row, where both temperature boxes and searchbar
were placed. They were taking too much space, causing the row to
overflow the available viewport width. The sections now have their own
rows, enabling them to be more flexible and scalable.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -58,7 +58,7 @@ form[name="search"] {
 
 .grid-box {
     display: grid;
-    grid-template-columns: [first] 9fr [second] 5fr [third] 9fr;
+    grid-template-columns: [first] 33% [second] 34% [third] 33%;
     justify-items: center;
     align-items: center;
     height: 20vh;
@@ -419,19 +419,24 @@ form[name="search"] {
     }
 
     .logo-text {
-        font-size: 1.8rem;
+        font-size: 2rem;
+        margin: .5em 0 0 0;
     }
 
     .grid-box {
-        height: 20vh;
-        grid-template-columns: [first] 5fr [second] 5fr;
-        grid-template-rows: [r1] 1fr [r2] 1fr;
-        margin: 0;
+        min-height: 22vh;
+/*         grid-template-columns: [first] 5fr [second] 5fr;
+        grid-template-rows: [r1] 50% [r2] 50%;
+        margin: 0; */
+        grid-template-columns: 100%;
+        grid-template-rows: auto;
+        place-items: center;
+        margin-bottom: 3vh;
     }
 
     .app-logo {
         grid-row: 1;
-        grid-column: 1 / 3;
+        /* grid-column: 1 / 3; */
         scale: 2.5;
     }
 
@@ -439,8 +444,8 @@ form[name="search"] {
         display: flex;
         flex-wrap: nowrap;
         justify-items: end;
-        grid-row: 2;
-        scale: 1.6;
+        scale: 2;
+        grid-row: 3;
     }
 
     .searchbar > input {
@@ -449,14 +454,16 @@ form[name="search"] {
 
     .temp-box {
         grid-row: 2;
-        scale: 1.4;
+        scale: 1.75;
+        margin: 1.1vh;
+        /* padding: .3em; */
     }
 
     .main-container {
         display: flex;
         gap: .2em;
         place-items: center;
-        height: 80vh;
+        min-height: 75vh;
     }
 
     .weather-box {
